--- a/ai-notion-clone/package.json
+++ b/ai-notion-clone/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.29.1",
+    "@blocknote/mantine": "^0.29.1",
+    "@blocknote/react": "^0.29.1",
     "@clerk/nextjs": "^6.18.0",
+    "@liveblocks/client": "^2.24.2",
+    "@liveblocks/react": "^2.24.2",
+    "@liveblocks/react-blocknote": "^2.24.2",
+    "@liveblocks/react-ui": "^2.24.2",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.2",
