--- a/ai-notion-clone/package.json
+++ b/ai-notion-clone/package.json
@@ -14,6 +14,7 @@
     "@blocknote/react": "^0.29.1",
     "@clerk/nextjs": "^6.18.0",
     "@liveblocks/client": "^2.24.2",
+    "@liveblocks/node": "^2.24.2",
     "@liveblocks/react": "^2.24.2",
     "@liveblocks/react-blocknote": "^2.24.2",
     "@liveblocks/react-ui": "^2.24.2",
@@ -24,6 +25,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
+    "framer-motion": "^12.10.5",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
