--- a/ai-notion-clone/package.json
+++ b/ai-notion-clone/package.json
@@ -12,6 +12,7 @@
     "@blocknote/core": "^0.29.1",
     "@blocknote/mantine": "^0.29.1",
     "@blocknote/react": "^0.29.1",
+    "@blocknote/shadcn": "^0.30.0",
     "@clerk/nextjs": "^6.18.0",
     "@liveblocks/client": "^2.24.2",
     "@liveblocks/node": "^2.24.2",
