--- a/ai-notion-clone/package.json
+++ b/ai-notion-clone/package.json
@@ -29,9 +29,11 @@
     "framer-motion": "^12.10.5",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2"
   },
